--- a/site.yml
+++ b/site.yml
@@ -1,10 +1,10 @@
-- hosts: cursus
+- hosts: course
   gather_facts: no  # to not require python
   tasks:
   - name: Install Python
     raw: if test -f /usr/bin/python; then true; else (apt-get update && apt-get -y install python && touch /root/.python_installed); fi
 
-- hosts: cursus
+- hosts: course
   roles: []
 #  - { role: docker-engine,        tags: [ 'docker' ] }
 #  - { role: butterfly,            tags: [ 'butterfly' ] }
