--- a/site.yml
+++ b/site.yml
@@ -5,7 +5,7 @@
     raw: if test -f /usr/bin/python; then true; else (apt-get update && apt-get -y install python && touch /root/.python_installed); fi
 
 - hosts: course
-  roles: []
-#  - { role: docker-engine,        tags: [ 'docker' ] }
+  roles:
+  - { role: docker-engine,        tags: [ 'docker' ] }
 #  - { role: butterfly,            tags: [ 'butterfly' ] }
 #  - { role: cursus,               tags: [ 'cursus' ]}
