--- a/roles/course/tasks/main.yml
+++ b/roles/course/tasks/main.yml
@@ -4,7 +4,7 @@
   when: docker_registry in ansible_all_ipv4_addresses
 
 - name: Install packages
-  apt: pkg={{ item }} state=installed
+  apt: pkg={{ item }} state=present
   with_items:
     - docker-compose
     - git
