--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -3,15 +3,18 @@
   apt:
     update_cache: yes
     cache_valid_time: 3600
-  notify:
-    cache_updated
+  register: result
 
 #- name: Install aptitude (requirement for apt module)
 #  package:
 #    name: aptitude
 #    state: latest
 
-- name: Upgrade APT to the lastest packages
-  apt:
-    upgrade: safe
-  when: cache_updated
+- debug:
+    var: result
+    verbosity: 2
+
+#- name: Upgrade APT to the lastest packages
+#  apt:
+#    upgrade: safe
+#  when: cache_updated
