--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -5,16 +5,16 @@
     cache_valid_time: 3600
   register: apt_cache_result
 
-#- name: Install aptitude (requirement for apt module)
-#  package:
-#    name: aptitude
-#    state: latest
+- name: Install aptitude (requirement for apt module)
+  package:
+    name: aptitude
+    state: latest
 
 - debug:
     var: apt_cache_result
-    verbosity: 0
+    verbosity: 2
 
 - name: Upgrade APT to the lastest packages
   apt:
     upgrade: safe
-  when: apt_cache_result.cache_updated
+  when: apt_cache_result|changed
