--- a/roles/course/tasks/main.yml
+++ b/roles/course/tasks/main.yml
@@ -15,6 +15,7 @@
     name: cursus
     password: "$6$1IyW/79Y$7LbxJx8kST2g5Wv4A8Op9lOJO16TLuauu6TM17xp2iK1O1r7T9Kkmo0EnhPuY40vpaHh4ggeO7vwPIV0MyNo31"
     update_password: always
+    shell: /bin/bash
     groups:
       - docker
       - sudo
