--- a/roles/docker-engine/tasks/main.yml
+++ b/roles/docker-engine/tasks/main.yml
@@ -66,8 +66,8 @@
     state: present
 
 # Install docker-py
-- import_tasks: docker_py.yml
-  when: not skip_docker_py
+#- import_tasks: docker_py.yml
+#  when: not skip_docker_py
 
 - name: Storage directory permissions
   file:
