--- a/roles/course/tasks/main.yml
+++ b/roles/course/tasks/main.yml
@@ -20,7 +20,6 @@
       - docker
       - sudo
 
-#docker run -d -p 5000:5000 --restart always --name registry registry:2
 - name: "Launch docker registry"
   docker_container:
     name: registry
@@ -30,6 +29,12 @@
     restart_policy: unless-stopped
     state: started
   when: registry is defined
+
+- name: "Ensure no docker registry on other hosts"
+  docker_container:
+    name: registry
+    state: absent
+  when: registry is not defined
 
 - name: "Add curusregistry to hostfile"
   lineinfile:
